--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,11 +1,14 @@
 .services {
+  width: auto;
   display: flex;
-  padding: 60px 13% 45px;
-  border: 3px solid #5c91b4;
-  margin: 0 2%;
+  justify-content: space-between;
+  
+  
+  margin: 0 30px 0 20px;
 }
 .width {
   width: 50%;
+  padding: 20px 50px 20px 50px;
 }
 
 @media (max-width: 768px) {
