--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -10,6 +10,11 @@
   width: 50%;
   padding: 20px 50px 20px 50px;
 }
+.service_text{
+  color: #000;
+   text-align: left;
+    font-size: 16px;
+}
 
 @media (max-width: 768px) {
   .services {
@@ -22,6 +27,8 @@
   }
   .width {
     width: 100%;
+    padding: 20px 20px 20px 10px;
+
   }
 }
 
@@ -33,6 +40,12 @@
     margin: 0 2%;
   }
   .width {
-    width: 100%;
+    width: 90%;
+    padding: 20px 20px 20px 10px;
+
+  }
+  #empowerment_coaching{
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
