--- a/public/content/hr/css/hr.css
+++ b/public/content/hr/css/hr.css
@@ -1,3 +1,74 @@
+.fa-icon-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  margin-right: -50px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+ background-color: #2A71BC;
+  
+  margin: 30px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 150px;
+  background: #000;
+ height: auto;
+  z-index: 1;
+  margin-top: 80px;
+  
+}
+
+
+.dropdown-content a {
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  color: #333;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown.active .dropdown-content {
+  display: block;
+}
+@media only screen and (max-width: 600px) {
+  .dropdown-content {
+    width: 60px;
+   min-height: auto;
+   padding: 10px 10px;
+   margin-top: 50px;
+  }
+}
+@media only screen and (min-width: 800px) {
+  .dropdown-content {
+    width: 60px;
+   min-height: auto;
+   padding: 10px 10px;
+   margin-top: 100px;
+  }
+}
+/* @media only screen and (min-width: 990px) {
+  .dropdown-content {
+    width: 80px;
+   min-height: auto;
+   padding: 10px 10px;
+   margin-top: 80px;
+  }
+} */
+
+
+
+
+
 @media only screen and (min-width: 768px) {
   .tr-menu.header-split #Top_bar:not(.is-sticky) {
     top: 0 !important;
@@ -1020,7 +1091,7 @@ a.mfn-link-6:before {
   background-color: #f5f5f5;
 }
 #Top_bar .top_bar_right a {
-  color: #444444;
+  color: #fff;
 }
 #Top_bar .menu > li > a {
   color: #c7deb4;
@@ -1160,6 +1231,11 @@ a.mfn-link-6:before {
 #Subheader ul.breadcrumbs li a {
   color: rgba(255, 255, 255, 0.6);
 }
+
+.foot-content{
+	display: flex; 
+	justify-content: space-between;
+  }
 #Footer,
 #Footer .widget_recent_entries ul li a {
   color: #aecab9;
@@ -1921,6 +1997,7 @@ h3 {
 h4 {
   font-weight: 700;
   letter-spacing: 2px;
+  text-align: end;
 }
 h5 {
   font-weight: 400;
@@ -2528,7 +2605,9 @@ h6 {
 }
 #Top_bar .column {
   margin-bottom: 0;
+  
 }
+
 .layout-full-width.header-fw #Action_bar .container,
 .layout-full-width.header-fw #Top_bar .container {
   max-width: 100%;
@@ -2563,6 +2642,11 @@ h6 {
 .ie #Top_bar .top_bar_right:before {
   width: 11px;
 }
+.fas, .fa-solid {
+  font-weight: 900;
+  font-size: 40px;
+  margin-bottom: 20px;;
+}
 
 /* Top bar width */
 
@@ -2574,7 +2658,20 @@ h6 {
 
 #Top_bar .logo {
   float: left;
-  /* margin: 0 30px 0 20px; */
+}
+
+@media only screen and (max-width: 750px) {
+  #Top_bar .logo {
+    width: 25%;
+  }
+  #Top_bar .column {
+    display: flex;
+    
+  }
+  #Top_bar .logo #logo  {
+   width: 100%;
+   padding: 0 0 30px 0;
+  }
 }
 #Top_bar .logo h1 {
   margin: 0;
@@ -2595,7 +2692,7 @@ h6 {
 }
 #Top_bar #logo img {
   vertical-align: middle;
-  max-height: 50%;
+  max-height: 40px;
 }
 #Top_bar #logo img.logo-sticky,
 #Top_bar #logo img.logo-mobile {
