--- a/public/content/hr/css/structure.css
+++ b/public/content/hr/css/structure.css
@@ -1215,8 +1215,10 @@ body.minimalist-header.header-below:not(.template-slider) #Header {
 	float: left;
 	margin: 20px 30px 0 0;
 }
-#Top_bar .logo h1 {
-	margin: 0;
+@media only screen and (min-width: 1000px) {
+#Top_bar .logo {
+	margin-top: 10px;
+}
 }
 #Top_bar .logo:not(.text-logo) h1 {
 	line-height: 0;
