--- a/public/css/global.css
+++ b/public/css/global.css
@@ -440,14 +440,14 @@ iframe {
 .ser-icon{
 	margin-right: -100px;
 }
-@media only screen and (min-width: 1400px) {
+/* @media only screen and (min-width: 900px) {
 	.ser-icon{
-		margin-right: -190px;
+		margin-right: -120px;
 	}
-}
-@media only screen and (min-width: 2000px) {
+} */
+@media only screen and (min-width: 4000px) {
 	.ser-icon{
-		margin-right: -50px;
+		margin-right: 0;
 	}
 }
 a.tp-button {
