--- a/public/css/structure.css
+++ b/public/css/structure.css
@@ -6596,7 +6596,7 @@ body {
         float: none;
         top: 0;
         height: 60px;
-        padding: 0 10px;
+        /* padding: 0 10px; */
     }
 
     #Top_bar .top_bar_right .top_bar_right_wrapper {
