--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -742,6 +742,10 @@ img {
   max-width: 100%;
   max-height: 100%;
 }
+.nav_logo img {
+  max-width: 20px;
+  max-height: 20px;
+}
 
 p {
   font-size: 14px;
@@ -4476,7 +4480,7 @@ input:focus {
 
 /* --------------- tc header style3 --------------- */
 .tc-header-style3 .content {
-  background-image: url(../img/header/header3.png);
+  background-image: url(../img/header/hero_sec.webp);
   background-size: cover;
   padding: 120px 0;
   color: #fff;
