--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -251,7 +251,7 @@ header {
     margin-top: 0;
   }
   .testimonial-info {
-    margin: 20px 20px;
+    padding: 0 2em 0 2em;
     color: black;
     font-size: 12px;
     font-family: Manrope;
@@ -261,7 +261,7 @@ header {
     word-wrap: break-word;
   }
   .testimonial-flex {
-    margin: 20px 20px;
+    padding: 2.5em 2.5em;
     display: flex;
     justify-content: space-between;
   }
@@ -423,6 +423,7 @@ header {
     width: 50%;
     display: flex;
     justify-content: center;
+    padding-left: 6em; 
   }
   .portfolio-title {
     color: #0272bd;
