--- a/public/styles/mediaquery.css
+++ b/public/styles/mediaquery.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 850px) {
   .buttons {
     margin-left: 0;
     width: 200px;
@@ -44,19 +44,17 @@
         line-height: 40px;
         letter-spacing: 1.6px;
         word-wrap: break-word;
-        a{
-     text-decoration: none;
-     color: black;
-    }
-    .buttons a{
-      color: #fff;
-      text-decoration: none;
-    }
+        a {
+          text-decoration: none;
+          color: black;
+        }
+        .buttons a {
+          color: #fff;
+          text-decoration: none;
+        }
       }
-     
 
       .close-mobile-menu {
-       
         display: flex;
         justify-content: center;
         font-size: 50px;
@@ -167,7 +165,7 @@
   .testimonial {
     margin-top: 85px;
     .swiper-slide {
-      width:  -moz-fit-content;
+      width: -moz-fit-content;
       width: fit-content;
     }
 
@@ -184,6 +182,10 @@
     align-items: center;
     width: 100%;
   }
+  .two-items {
+    height: 700px;
+  }
+
   /* PORTFOLIO */
   .portfolio-flex {
     display: flex;
@@ -194,6 +196,13 @@
     .portfolio-cont {
       width: 100%;
     }
+
+    .portfolio-text,
+    .portfolio-img {
+      width: 80%;
+      display: flex;
+      justify-content: center;
+    }
     .portfolio-img img {
       width: 200px;
     }
@@ -201,13 +210,11 @@
       position: relative;
       top: 100px;
       left: 15px;
-      /* z-index: 2; */
     }
     .bottom-port-img img {
       position: relative;
       top: -100px;
       left: 0;
-      /* z-index: 2; */
     }
   }
   /* SERVICES */
@@ -248,11 +255,35 @@
       flex-direction: column;
       justify-content: space-between;
     }
-    i{
-    
-   position: relative;
-   top: 0;
-   left: 0;
+    i {
+      position: relative;
+      top: 0;
+      left: 0;
+    }
   }
+}
+@media only screen and (max-width: 1500px) {
+  .bg-blur {
+    display: none;
   }
+}
+@media only screen and (max-width: 1050px) {
+  
+    .portfolio {
+    .portfolio-cont {
+      background-color: #feffff;
+      width: 90%;
+      margin: 50px 0 50px 0;
+    }
+    .portfolio-text,
+    .portfolio-img {
+      width: 70%;
+      display: flex;
+      justify-content: center;
+    }
+    .portfolio-text {
+    padding: 0 20px;
+}
+  }
+  
 }
