--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -61,14 +61,22 @@ header {
     height: 100px;
     align-items: center;
     padding: 0 50px 0 50px;
-    margin-bottom: 50px;
+    margin-bottom: 8px;
+    
     
 
     .nav-list {
       display: flex;
       justify-content: space-between;
+      .buttons{  
+        margin-top: 10px;
+      }
     }
-    
+
+    .logo {
+      margin-left: 30px;
+    }
+
     .list {
       margin-top: 18px;
       display: flex;
